# DynRPG_Pathfeeder

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Doxyfile  readme.md
ExampleGame/: DynRPG.ini  Map0003.lmu  RPG_RT.ldb  RPG_RT.lmt
TestGame/: DynRPG.ini  Map0001.lmu  Map0002.lmu  Map0003.lmu  RPG_RT.ldb  RPG_RT.lmt
dependencies/DynRPG_0_20/sdk/: dynrpg.chm
dependencies/DynRPG_0_20/sdk/include/DynRPG/: Action.h  Actor.h  BattleSettings.h  Battler.h  Catalog.h  Character.h  DBActor.h  DBSystem.h  DList.h  DString.h  DynRPG.h  EventScriptData.h  Input.h  Map.h  Monster.h  Picture.h  Screen.h  Switches.h  System.h  Variables.h
dependencies/DynRPG_0_32/: readme.txt
dependencies/DynRPG_0_32/sdk/: dynrpg_0_32.chm  go_here_for_updates.txt
dependencies/DynRPG_0_32/sdk/include/DynRPG/: DynRPG.h
dependencies/DynRPG_0_32/sdk/lib/: DynRPG.lib  DynRPGd.lib
src/: CMakeLists.txt  Pathfinding.hpp  Vector.hpp  _Documentation.h  plugin.cpp
